--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -16,6 +16,11 @@
   <name>SWF Framework</name>
 
   <dependencies>
+		<dependency>
+			<groupId>org.htmlparser</groupId>
+			<artifactId>htmlparser</artifactId>
+			<version>2.1</version>
+		</dependency>
   </dependencies>
 
   <build>
