--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
 			<version>6.0</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.htmlparser</groupId>
+			<artifactId>htmlparser</artifactId>
+			<version>2.1</version>
+		</dependency>
 
     <!-- test dependency -->
     <dependency>
